# pas.plugins.authomatic

./: .coveragerc  .editorconfig  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CHANGES.md  CHANGES.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  MANIFEST.in  Makefile  README.md  README.rst  base.cfg  bobtemplate.cfg  bootstrap-5.1.x.sh  buildout.cfg  constraints_plone43.txt  coredev5.cfg  instance.yaml  mx.ini  plone-4.3.x.cfg  plone-5.1.x.cfg  plone-5.2.x.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_plone43.cfg  test_plone50.cfg  test_plone51.cfg  test_plone52.cfg  tox.ini  travis.cfg  versions.cfg
.github/: FUNDING.yml
.github/workflows/: changelog.yml  ci.yml  code-analysis.yml  config.yml  main.yml  tests.yaml
docs/: LICENSE.rst
docs/source/: conf.py  index.rst
news/: +coverage.internal  +fail-fast.internal  +logging.internal  +matrix.internal  +pytest-plone.tests  +readme.documentation  +release.documentation  +restapi.internal  100.bugfix  102.internal  104.internal  105.internal  106.feature  107.breaking  108.feature  109.breaking  111.feature  111.internal  112.internal  112.tests  113.feature  114.feature  71.internal  72.internal  73.feature  80.internal  82.internal  84.internal  85.internal  86.internal  87.feature  89.internal  90.internal  91.internal  92.internal  93.internal  95.bugfix
src/pas/plugins/: __init__.py
src/pas/plugins/authomatic/: __init__.py  _types.py  about.py  config.py  configure.zcml  dependencies.zcml  integration.py  interfaces.py  log.py  meta.zcml  plugin.py  profiles.zcml  setuphandlers.py  testing.py  useridentities.py  useridfactories.py  utils.py
src/pas/plugins/authomatic/Extensions/: install.py
src/pas/plugins/authomatic/browser/: add_plugin.pt  authomatic.pt  configure.zcml  controlpanel.py  login.pt  login.py  view.py
src/pas/plugins/authomatic/browser/resources/: authomatic-addon.min.css  authomatic-addon.min.css.map  authomatic.css  authomatic.css.map  authomatic.less
src/pas/plugins/authomatic/integration/: __init__.py  restapi.py  zope.py
src/pas/plugins/authomatic/locales/: pas.plugins.authomatic-manual.pot  pas.plugins.authomatic.pot  update.py  update.sh
src/pas/plugins/authomatic/locales/de/LC_MESSAGES/: pas.plugins.authomatic.po
src/pas/plugins/authomatic/locales/es/LC_MESSAGES/: pas.plugins.authomatic.po
src/pas/plugins/authomatic/locales/fr/LC_MESSAGES/: pas.plugins.authomatic.po
src/pas/plugins/authomatic/locales/it/LC_MESSAGES/: pas.plugins.authomatic.po
src/pas/plugins/authomatic/locales/pt_BR/LC_MESSAGES/: pas.plugins.authomatic.po
src/pas/plugins/authomatic/locales/ro/LC_MESSAGES/: pas.plugins.authomatic.po
src/pas/plugins/authomatic/patches/: __init__.py  authomatic.py
src/pas/plugins/authomatic/profiles/base/: metadata.xml
src/pas/plugins/authomatic/profiles/base-uninstall/: import_steps.xml  registry.xml
src/pas/plugins/authomatic/profiles/default/: browserlayer.xml  controlpanel.xml  import_steps.xml  registry.xml
src/pas/plugins/authomatic/profiles/plone4/: controlpanel.xml  cssregistry.xml
src/pas/plugins/authomatic/profiles/plone5/: controlpanel.xml  metadata.xml  registry.xml
src/pas/plugins/authomatic/profiles/uninstall/: browserlayer.xml  controlpanel.xml  import_steps.xml  registry.xml
src/pas/plugins/authomatic/profiles/uninstall-plone4/: metadata.xml
src/pas/plugins/authomatic/profiles/uninstall-plone5/: registry.xml
src/pas/plugins/authomatic/services/: authomatic.py  configure.zcml  login.py
src/pas/plugins/authomatic/tests/: mocks.py  test_browser_controlpanel.py  test_plugin.py  test_robot.py  test_services_authomatic.py  test_services_login.py  test_setup.py  test_setuphandler.py  test_upgrades.py  test_useridentities.py  test_useridfactories.py
src/pas/plugins/authomatic/tests/robot/: test_acceptance.robot
src/pas/plugins/authomatic/useridfactories/: __init__.py  base.py  configure.zcml  userid.py  username.py  username_userid.py  uuid_.py
src/pas/plugins/authomatic/utils/: __init__.py  content.py  exportimport.py  plugin.py  request.py  settings.py
src/pas/plugins/authomatic/vocabularies/: configure.zcml  userid.py
tests/: conftest.py  test_config.py
tests/browser/: test_view.py
tests/functional/: test_controlpanel.py  test_controlpanel_functional.py
tests/integration/: test_restapi.py  test_zope.py
tests/plugin/: conftest.py  test_plugin.py  test_useridentities.py  test_useridfactories.py
tests/services/: conftest.py  test_services_authomatic.py  test_services_login.py
tests/setup/: test_setup_install.py  test_setup_uninstall.py  test_setuphandler.py  test_upgrades.py
tests/useridfactories/: conftest.py  test_factory_provider_id.py  test_factory_username.py  test_factory_username_userid.py  test_factory_uuid4.py  test_new_userid.py
tests/utils/: test_content.py  test_exportimport.py  test_plugin.py  test_request.py  test_settings.py
tests/vocabulary/: test_userid_vocabulary.py
